--- a/app/templates/registration/register.html
+++ b/app/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="container mt-4">
