--- a/app/templates/insta/profile.html
+++ b/app/templates/insta/profile.html
@@ -8,12 +8,11 @@
                     <div class="row">
                         <div class="col-md-1"></div>
                         <div class="col-md-3">
-                            <img class="rounded-circle account-img" src="{{ user.profile.profile_picture.url }}">
+                            <img class="rounded-circle account-img" src="{{ user.profile.profile_picture.url }}" width="95">
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="media-body">
-                                <div class="account-heading"><span class="mr-3 text-secondary username">{{ user.username
-                                        }}</span>
+                                <div class="account-heading"><span class="mr-3 text-secondary username">{{ user.username }}</span>
                                     <a class="btn btn-sm btn-outline-secondary mr-3" data-toggle="modal"
                                         data-target=".bd-example-modal-md"><strong>Edit Profile</strong></a>
                                     <a class="mt-3" data-toggle="modal" data-target="#ModalCenter"><i class="fa fa-cog mt-3"
@@ -54,7 +53,7 @@
                         <form action="" method="post" novalidate enctype="multipart/form-data" class="mr-4 mt-4 ml-4 mb-4">
                             {% csrf_token%}
                             {{ user_form|crispy}}
-                            {{ prof_form|crispy}}
+                            {{ profile_form|crispy}}
                             <button type="submit" class="btn btn-primary btn-sm"> Update Profile</button>
                         </form>
                     </div>
