--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,13 +1,13 @@
-{% extends 'layout.html' %}
+{% extends 'registration/layout.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
 {% load static %}
     <div class="container mt-4">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-4 mt-4">
                 <div class="card ">
                     <div class="card-title mt-4">
-                        <h2>Login</h2>
+                        <h2 class="text-center">Login</h2>
                     </div>
                     <div class="card-body mb-3 mr-3 ml-3">
                         <form action="" method="post" novalidate>
