--- a/app/templates/registration/register.html
+++ b/app/templates/registration/register.html
@@ -1,11 +1,11 @@
-{% extends 'layout.html' %}
+{% extends 'registration/layout.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-4">
-                <div class="card">
+                <div class="card " style="width: 25rem;">
                     <div class="card-title mt-4">
                         <h2 class="text-center">Sign Up</h2>
                     </div>
