--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,9 @@
             <span class="pull-right">
                 <a href="{% url 'profile' user.username %}" class="instaicon pers">Profile</a>
             </span>
+            <span class="pull-right">
+                <a href="{% url 'logout' %}" class="instaicon pers">Logout</a>
+            </span>
         </nav>
     </div>
 
