--- a/app/templates/insta/like_section.html
+++ b/app/templates/insta/like_section.html
@@ -1,12 +1,12 @@
-<form action="{% url 'liked' image.id %}" method="post">
+<form action="{% url 'liked' image.id %}" method="POST">
     {% csrf_token %}
     {% if is_liked %}
     <button class="btn btn-sm" type="submit" id="like" name="image_id" value="{{image.id}}"><i
-            class="fa fa-heart hearticon mx-auto" aria-hidden="true" style="color:red"></i></a>
+            class="fas fa-heart hearticon mx-auto" aria-hidden="true" style="color:red"></i></a>
     </button>
     {% else %}
     <button class="btn btn-sm" type="submit" id="like" name="image_id" value="{{image.id}}"><i
-            class="far fa-heart hearticon mx-auto" aria-hidden="true"></i>
+            class="fas fa-heart hearticon mx-auto" aria-hidden="true" ></i>
     </button>
     {% endif %}
 </form>
