--- a/app/templates/insta/post_comment.html
+++ b/app/templates/insta/post_comment.html
@@ -5,19 +5,17 @@
         <div class="card">
             <div class="row">
                 <div class="col-md-8 ml-3">
-                    <img src="{{image.image.url}}" style="visibility: hidden;" class="card-img" width="100%" />
+                    <img src="{{ image.image.url }}"  class="card-img" width="100%" />
                 </div>
                 <div class="col-md-3 mt-2">
-                    <img src="{{image.user.profile_picture.url}}" class="rounded-circle border ml-3 mt-2  mr-3"
+                    <img src="{{ image.user.profile_picture.url }}" class="rounded-circle border ml-3 mt-2  mr-3"
                         alt="{{image.user.user.username}}" width="35" height="35">
-                    <a href="{% url 'user_profile' image.user.user.username %}" class="mt-4 user">{{image.user.user.username
-                        | title}}</a>
+                    <a href="{% url 'user_profile' image.user.user.username %}" class="mt-4 user">{{ image.user.user.username|title }}</a>
 
                     <hr style="width:96%">
                     {% for comment in image.comments.all %}
                     <div class="comment">
-                        <div class="ml-2"><strong>{{ comment.user.user.username }}</strong> <span class="text-secondary">{{
-                                comment.comment }}</span>
+                        <div class="ml-2"><strong>{{ comment.user.user.username }}</strong> <span class="text-secondary">{{ comment.comment }}</span>
                         </div>
                     </div>
                     {% empty %}
@@ -27,7 +25,7 @@
                     <div id="like-section">
                         {% include 'insta/like_section.html' %}
                     </div>
-                    <form class="form" action="" method="post" novalidate>
+                    <form class="form" action="" method="POST" novalidate>
                         {% csrf_token %}
                         <div class="row">
                             <div class="col-md-10">
@@ -35,7 +33,7 @@
                             </div>
                             <div class="col-md-2 mt-4">
                                 <button type="submit" class="btn btn-sm btn-outline-primary"
-                                    style="margin-top:14px; margin-left:-10px">post</button>
+                                    style="margin-top:14px; margin-left:-10px">Post</button>
                             </div>
                         </div>
 
