--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
                 <div class="instaicon disc"></div>
                 <div class="instaicon like"></div>
                 <a href="{% url 'profile' user.username %}" class="instaicon pers"></a>
-            </span
+            </span>
         </nav>
     </div>
 
