--- a/app/templates/insta/post_comment.html
+++ b/app/templates/insta/post_comment.html
@@ -7,7 +7,7 @@
                 <div class="col-md-8 ml-3">
                     <img src="{{ image.image.url }}"  class="card-img" width="100%" />
                 </div>
-                <div class="col-md-3 mt-2">
+                <div class="">
                     <img src="{{ image.user.profile_picture.url }}" class="rounded-circle border ml-3 mt-2  mr-3"
                         alt="{{image.user.user.username}}" width="35" height="35">
                     <a href="{% url 'user_profile' image.user.user.username %}" class="mt-4 user">{{ image.user.user.username|title }}</a>
@@ -27,8 +27,8 @@
                     </div>
                     <form class="form" action="" method="POST" novalidate>
                         {% csrf_token %}
-                        <div class="row">
-                            <div class="col-md-10">
+                        <div class="form-group">
+                            <div class="" rows="6">
                                 {{ form|crispy }}
                             </div>
                             <div class="col-md-2 mt-4">
@@ -44,4 +44,5 @@
             </div>
         </div>
     </div>
+    
 {% endblock %}
