--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,10 +34,14 @@
 <body>
     <div class="navbar fixed-top bg-white">
         <nav class="container">
-            <span class="navbar-brand mb-0 h1">
-                <a href="/">Insta-Clone</a>
-               
+            <span class="navbar-brand mb-0 h1" >
+                <a href="/" style="color: black;">Insta-Clone</a>               
             </span>
+            
+            <span class="navbar-brand mb-0 h1">
+                <a href="/" data-toggle="modal" data-target="#imageUpload" style="color: black;"><i class="fas fa-camera fa-2x" style="color: black;padding-left: 60px;"></i></a>
+            </span>
+
             <form class="mb-0 h1 ml-auto mr-auto" id="searchform" action="{% url 'search' %}">
                 <input name="search_user" autocomplete="off" id="searching" class="form-control d-none d-md-block"
                     placeholder="Search">
@@ -65,6 +70,30 @@
 
             </div>
         </nav>
+    </div>
+
+    <div class="modal fade" id="imageUpload" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Image Upload</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" enctype="multipart/form-data" novalidate>
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class="btn btn-sm btn-success">Upload</button>
+                        <button type="button" class="btn btn-sm btn-outline-danger" data-dismiss="modal">
+                            Close
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
     {% block content %}
