--- a/app/templates/insta/index.html
+++ b/app/templates/insta/index.html
@@ -5,35 +5,6 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-7">
-                <div class="row">
-                    <button class="btn btn-sm btn-outline-primary ml-4 mb-3" data-toggle="modal" data-target="#imageUpload">
-                        Upload Image
-                    </button>
-                    <div class="modal fade" id="imageUpload" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLongTitle">Image Upload</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <form  method="POST" enctype="multipart/form-data" novalidate>
-                                        {% csrf_token %}
-                                        {{ form|crispy }}
-                                        <button class="btn btn-sm btn-success">Upload</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" data-dismiss="modal">
-                                            Close
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
 
                 {% for image in images %}
                 <div class="card mb-4">
@@ -47,19 +18,24 @@
                         <a href="{% url 'comment' image.id %}">
                             <div class="card-text">
                                 <img src="{{image.image.url}}"  class="card-img" width="100%" />
+                                
                             </div>
                         </a>
+
+                        <div class="ml-2">
+                            <p>{{image.caption}}</p>
+                        </div>
+
                     </div>
                     <div class="iconic ml-2">
-                        <button class="btn btn-sm" type="submit" name="image_id" value="{{image.id}}">
-                            <a href="{% url 'comment' image.id %}"><i class="fa fa-heart hearticon mx-auto"
-                                    aria-hidden="true" ></i></a>
+                        <button class="btn btn-sm" type="submit" name="image_id">
+                            <a href="{% url 'likePost' image.id %}"><i class="fa fa-heart hearticon mx-auto fa-2x" style="color: black;" aria-hidden="true" ></i></a>
                         </button>
                         <button class="btn btn-sm" type="submit"><a href="{% url 'comment' image.id %}"><i
-                                    class="fa fa-comment hearticon mx-auto" aria-hidden="true"></i>
+                                    class="fa fa-comment hearticon mx-auto fa-2x" style="color: black;" aria-hidden="true"></i>
                             </a></button>
                     </div>
-                    <span class="ml-4 mb-1"><strong>{{image.likes.count}} like{{image.likes.count|pluralize}}</strong></span>
+                    <span class="ml-4 mb-1"><strong>{{image.likes}} like</strong></span>
                     <span class="text-secondary ml-4 viewall"><a href="{% url 'comment' image.id %}">view all
                             {{image.comments.count}} comment{{image.comments.count|pluralize}}</a></span>
                     <div class="allcomments mb-4">
@@ -80,7 +56,7 @@
                 
                 <div class="row">
                     <div class="col-md-10">
-                        <div class="card mt-4 mr-2 ml-2">
+                        <div class=" mt-4 mr-2 ml-2">
                             <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Other Users</div>
                             {% for user in users %}
                             <div class="container">
