--- a/app/templates/insta/post_comment.html
+++ b/app/templates/insta/post_comment.html
@@ -4,45 +4,57 @@
     <div class="container" style="margin-top:7%;">
         <div class="card">
             <div class="row">
-                <div class="col-md-8 ml-3">
+                <div class="col-md-12 ml-3 p-image">
                     <img src="{{ image.image.url }}"  class="card-img" width="100%" />
                 </div>
-                <div class="">
-                    <img src="{{ image.user.profile_picture.url }}" class="rounded-circle border ml-3 mt-2  mr-3"
-                        alt="{{image.user.user.username}}" width="35" height="35">
-                    <a href="{% url 'user_profile' image.user.user.username %}" class="mt-4 user">{{ image.user.user.username|title }}</a>
-
-                    <hr style="width:96%">
-                    {% for comment in image.comments.all %}
-                    <div class="comment">
-                        <div class="ml-2"><strong>{{ comment.user.user.username }}</strong> <span class="text-secondary">{{ comment.comment }}</span>
-                        </div>
-                    </div>
-                    {% empty %}
-                    <p class="ml-3">No comments here yet</p>
-                    {% endfor %}
-                    <hr style="width:96%; margin-top:84%;">
-                    <div id="like-section">
-                        {% include 'insta/like_section.html' %}
-                    </div>
-                    <form class="form" action="" method="POST" novalidate>
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <div class="" rows="6">
-                                {{ form|crispy }}
-                            </div>
-                            <div class="col-md-2 mt-4">
-                                <button type="submit" class="btn btn-sm btn-outline-primary"
-                                    style="margin-top:14px; margin-left:-10px">Post</button>
-                            </div>
-                        </div>
-
-
-                    </form>
-                </div>
-                <div class="col-md-1"></div>
+              
             </div>
         </div>
+
+
+        <div class="row">
+        <div class="col-md-3 mt-2">
+
+            
+            <img src="{{ image.user.profile_picture.url }}" class="rounded-circle border ml-3 mt-2  mr-3"
+                alt="{{image.user.user.username}}" width="35" height="35">
+            <a href="{% url 'user_profile' image.user.user.username %}" class="mt-4 user">{{ image.user.user.username|title }}</a>
+
+                <a class="ml-4" href="{% url 'likePost' image.id %}"><i class="fa fa-heart hearticon mx-auto" style="color: black;"> {{ image.likes }} Likes</i></a>
+
+        <hr style="width:100%">
+        {% for comment in image.comments.all %}
+        <div class="comment">
+            <div class="ml-2"><strong>{{ comment.user.user.username }}</strong> <span class="text-secondary">{{ comment.comment }}</span>
+            </div>
+        </div>
+        {% empty %}
+        <p class="ml-3">No comments here yet</p>
+        {% endfor %}
+
+            
+        </div>
+
+        <div class="col-md-2"></div>
+
+        <div class="col-md-7 mt-3">
+            <form class="form" action="" method="POST" novalidate>
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-md-10">
+                        {{ form|crispy }}
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Post</button>
+
+            </form>
+        </div>
+
+        </div>
+            
+
+
+
     </div>
-    
 {% endblock %}
