--- a/app/templates/insta/user_profile.html
+++ b/app/templates/insta/user_profile.html
@@ -8,12 +8,12 @@
                     <div class="row">
                         <div class="col-md-1"></div>
                         <div class="col-md-3">
-                            <img class="rounded-circle account-img" src="{{ user_prof.profile.profile_picture.url }}">
+                            <img class="rounded-circle account-img" src="{{ u_profile.profile.profile_picture.url }}">
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="media-body">
                                 <div class="account-heading">
-                                    <span class="mr-3 text-secondary username">{{ user_prof.username }}</span>
+                                    <span class="mr-3 text-secondary username">{{ u_profile.username }}</span>
                                     {% if follow_status %}
                                     <a class="btn btn-sm btn-outline-danger ml-5"
                                         href="{% url 'unfollow' u_profile.profile.id %}">Unfollow</a>
@@ -33,8 +33,8 @@
                                 <span class="mr-5"> <strong>{{ user.profile.followers.count }}</strong> followers </span> 
                                 <span class="mr-5"> <strong>{{ user.profile.following.count }}</strong> following</span>
                             </div>
-                            <h5>{{ user.profile.name }}</h5>
-                            <p class="text-secondary">{{ user.profile.bio }}</p>
+                            <h5>{{ u_profile.profile.name }}</h5>
+                            <p class="text-secondary">{{ u_profile.profile.bio }}</p>
                         </div>
                     </div>
                 </div>
@@ -43,20 +43,20 @@
         <hr class="mt-4">
         <div class="card-columns">
             {% for image in user_posts %}
-            <div class="card">
-                <div class="card-body parent ">
-                    <div class="im">
-                        <img src="{{image.image.url}}" alt="{{image.caption}}" class="card-img">
-                        <p id="overlay" class="text">
-                            <i class="fas fa-heart" style="color:white; font-size: 18"></i>
-                            <span style="color: white">{{image.likes.count}}</span>
-                            <i class="fas fa-comment ml-4" style="color: white"></i> <span
-                                style="color: white">{{image.comments.count}}</span>
-                        </p>
+                <div class="card">
+                    <div class="card-body parent ">
+                        <div class="im">
+                            <img src="{{image.image.url}}" alt="{{image.caption}}" class="card-img">
+                            <p id="overlay" class="text">
+                                <i class="fas fa-heart" style="color:white; font-size: 18"></i>
+                                <span style="color: white">{{image.likes.count}}</span>
+                                <i class="fas fa-comment ml-4" style="color: white"></i> <span
+                                    style="color: white">{{image.comments.count}}</span>
+                            </p>
 
+                        </div>
                     </div>
                 </div>
-            </div>
             {% endfor %}
         </div>
     </div>
