--- a/app/templates/insta/post_comment.html
+++ b/app/templates/insta/post_comment.html
@@ -4,7 +4,7 @@
     <div class="container" style="margin-top:7%;">
         <div class="card">
             <div class="row">
-                <div class="col-md-12 ml-3 p-image">
+                <div class="col-md-12 ml-3 ">
                     <img src="{{ image.image.url }}"  class="card-img" width="100%" />
                 </div>
               
