--- a/app/templates/insta/user_profile.html
+++ b/app/templates/insta/user_profile.html
@@ -30,8 +30,8 @@
 
                             <div class="post-details mt-3 mb-3">
                                 <span class="mr-5"><strong>{{user_posts.count}}</strong> Posts</span>
-                                <span class="mr-5"> <strong>{{ user.profile.followers.count }}</strong> followers </span> 
-                                <span class="mr-5"> <strong>{{ user.profile.following.count }}</strong> following</span>
+                                <span class="mr-5"> <strong>{{ u_profile.profile.followers.count }}</strong> followers </span> 
+                                <span class="mr-5"> <strong>{{ u_profile.profile.following.count }}</strong> following</span>
                             </div>
                             <h5>{{ u_profile.profile.name }}</h5>
                             <p class="text-secondary">{{ u_profile.profile.bio }}</p>
